css/sectionStyling.css
/* ... */
.contact {
    display: flex;
    justify-content: center;
}

.contact__cta {
    display: block;
    padding: 1rem .5rem;
    margin-top: 2rem;
    background-color: var(--light-blue);
    color: white;
    border-radius: 8px;
    width: 250px;
    text-transform: uppercase;
}

.contact__cta:hover,
button[type=submit]:hover {
    background-color: var(--dark-blue);
}


/* achievement section*/


/* footer */

footer {
    background-color: var(--off-black);
    padding: 2rem 0;
    border-top: 5px solid var(--light-blue);
}

.footer__system_link {
    margin-bottom: 2rem;
}

.footer__system_link a,
.footer__follow p {
    color: var(--light-blue);
    font-weight: bold;
}

.footer__follow {
    margin-bottom: 20px;
}

.footer__links {
    display: flex;
    justify-content: space-between;
}

.footerNav a {
    color: white;
}

.footerNav li {
    margin-bottom: 15px;
}

.follow {
    padding: 0 3em;
}

.social__links {}

.socialNav {
    display: flex;
    justify-content: space-between;
}

.social {}

.social a {
    color: white;
    font-size: 1.5rem;
}

.footer_logo {
    display: flex;
    justify-content: flex-end;
}

.footer_logo img {
    max-width: 200px;
}


/* footer */

#mobile__menu_toggle {
    display: none;
}

@media screen and (max-width: 1070px) {
    .achievements__wrap {
        justify-content: center;
    }
    .expandable__wrap {
        flex-wrap: wrap;
    }
    .industry__toggle {
        width: 32%;
        margin-bottom: 2rem;
    }
    .study__fieldset {
        padding: 0 1rem;
    }
}

@media screen and (max-width: 1024px) {
    .form__wrap form {
        flex-direction: column;
    }
    .form__wrap form>div {
        width: 100%;
    }
    .study__fieldset {
        align-items: center;
    }
    .footer_logo {
        justify-content: center;
    }
}

@media screen and (max-width: 800px) {
    #mobile__menu_toggle span {
        display: block;
        width: 25px;
        height: 3px;
        background-color: white;
        margin: 2px 0;
        border-radius: 20px;
    }
    .main__nav.active #mobile__menu_toggle span {
        background-color: var(--light-blue);
    }
    .main__nav.active #mobile__menu_toggle span:first-child {
        transform: rotate(45deg) translate(-3px);
    }
    .main__nav.active #mobile__menu_toggle span:nth-child(2) {
        transform: rotate(-45deg) translate(3px, -7px);
    }
    .main__nav.active #mobile__menu_toggle span:last-child {
        opacity: 0;
    }
    #mobile__menu_toggle {
        display: block;
    }
    .main__nav {
        flex-direction: column;
        align-items: flex-end;
        position: relative;
        overflow: hidden;
    }
    .main__nav.active {
        overflow: visible;
    }
    .mobile__wrap {
        transform: translateX(102%);
        position: absolute;
        height: 300px;
        top: 110%;
        width: 70vw;
        flex-direction: column;
        justify-content: flex-start;
    }
    .mobile__wrap.active {
        transform: translateX(0%);
    }
    .main__nav li {
        background-color: white;
        padding: 1rem .5rem;
        text-align: right;
        border-bottom: 1px solid var(--dark-blue)
    }
    .main__nav li a {
        color: var(--light-blue);
    }
    .main__nav a::after {
        right: 0;
    }
}

@media screen and (max-width: 600px) {
    .hero__filters {
        flex-direction: column;
    }
    .hero__filters select:first-child {
        margin-bottom: 1rem;
    }
    header select {
        width: 100%;
    }
    .achievement__column {
        width: 100%;
        margin-bottom: 1rem;
    }
    .industry__toggle {
        width: 48%;
    }
    .full__form {
        padding: 2rem;
    }
    .study__fieldset {
        align-items: flex-start;
    }
    .form__main input,
    #country {
        width: 100%;
    }
    .testimonial__images img:not(.headshot) {
        display: none;
    }
    .footer__links {
        flex-wrap: wrap;
    }
    .footerNav {
        width: 48%;
    }
    .follow {
        padding: 0;
        margin: 2rem 0;
    }
    .footer_logo {
        justify-content: center;
        margin: 2rem 0;
    }
}

